--- a/Shapkin_Task_5/Shapkin_Task_5.csproj
+++ b/Shapkin_Task_5/Shapkin_Task_5.csproj
@@ -79,5 +79,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="easy.txt" />
+    <Content Include="hard.txt" />
+    <Content Include="medium.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
