--- a/Shapkin_Task_7/Shapkin_Task_7.csproj
+++ b/Shapkin_Task_7/Shapkin_Task_7.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FoxAi.cs" />
+    <Compile Include="GameBoard.cs" />
+    <Compile Include="GameBoardFacade.cs" />
+    <Compile Include="GameState.cs" />
     <Compile Include="Task7.cs">
       <SubType>Form</SubType>
     </Compile>
